[package]
name = "qrsnd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = "0.6.1"
qrrs = "0.1.9"
rocket = "0.5.0"
rocket-multipart-form-data = "0.10.7"
rocket_contrib = { version = "0.4.11", features = ["uuid"] }
rocket-raw-response = "0.5.4"
